Fix responsive behaviour on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,9 @@ h6 {
 
 .recipe-method .card {
     height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .card li {
